Quick fix for viewing on mobile devices

--- a/css/testCSS.css
+++ b/css/testCSS.css
@@ -5,7 +5,7 @@
     color: white;
 
     font-family: Lato, serif;
-    font-size: 48px;
+    font-size: 43px;
 }
 
 #subtitle {
